@@ -49,7 +49,7 @@
 		</script>
 		
 		<li><a href="#" title="Modalbox without Ajax Test" onclick="Modalbox.show(node, {title: this.title, afterLoad: setObservers, onHide: removeObservers }); return false;">Modalbox without Ajax Builder Test</a></li>
-		<li><a href="#" title="Modalbox without Ajax plain HTML test" onclick="Modalbox.show('<h1>HTML Header</h1><input type=\'button\' value=\'Resize me +100\' onclick=\'Modalbox.resize(0, 120)\' /><input type=\'button\' value=\'Resize me -100\' onclick=\'Modalbox.resize(0, -100)\' />', {title: this.title, height: 250 }); return false;">Modalbox without Ajax plain HTML test</a></li>
+		<li><a href="#" title="Modalbox without Ajax plain HTML test" onclick="Modalbox.show('<h1>HTML Header</h1><input type=\'button\' value=\'Resize me +100\' onclick=\'Modalbox.resize(0, 120)\' /><input type=\'button\' value=\'Resize me -100\' onclick=\'Modalbox.resize(0, -100)\' /><script>alert($(\'MB_window\').inspect());</script>', {title: this.title, height: 250 }); return false;">Modalbox without Ajax plain HTML test</a></li>
 		<li><a href="#" title="Modalbox without Ajax by element ID test" onclick="Modalbox.show($('testContent'), {title: this.title, height: 250 }); return false;">Modalbox without Ajax by element ID test</a></li>
 		<li><a href="#" title="Modalbox activate / deactivate test" onclick="Modalbox.show('<div style=\'padding: 10px; height:100%; background:#FFF; border: 1px solid #CCC\'><h1>Activate / Deactivate Test</h1><input type=\'button\' value=\'Deactivate\' onclick=\'Modalbox.deactivate()\' /><input type=\'button\' value=\'Activate\' onclick=\'Modalbox.activate()\' /><br /><br /></div>', {title: this.title }); return false;">Modalbox activate / deactivate test</a></li>
 		<li><a href="#" title="Modalbox wrong parameter test" onclick="Modalbox.show(123, {title: this.title }); return false;">Modalbox wrong parameter test</a></li>
